# comfyui_depth_layer_rasterizer

./: README.md  pyproject.toml  requirements.txt
nodes/: __init__.py  depth_rasterize_layers.py  tooltips.py
rasterizer/: __init__.py  color_layers.py  composite.py  depth.py  effects.py  masks.py  pipeline.py
tests/: conftest.py  test_rasterizer.py
