[project]
name = "comfyui-depth-layer-rasterizer"
version = "0.1.0"
description = "Quantize depth into color-preserved layers for paper-cut and parallax effects in ComfyUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
]

[tool.comfy]
PublisherId = "depth-layer-rasterizer"
DisplayName = "Depth Layer Rasterizer"
Icon = ""
