[project]
name = "comfyui-depth-layer-rasterizer"
version = "0.1.0"
description = "Depth-map paper-cut and parallax layer rasterizer for ComfyUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[tool.comfy]
PublisherId = "depth-layer-rasterizer"
DisplayName = "Depth Layer Rasterizer"
Icon = ""
